tests/macros/list/filter_async.stderr
error: option `filter_async` does not exist for kind `list`
 --> $DIR/filter_async.rs:2:50
  |
2 |     let q = inquisition::questions![list { async filter: todo!() }];
  |                                                  ^^^^^^
