tests/macros/list/filter_async.rs
fn main() {
    let q = inquisition::questions![list { async filter: todo!() }];
}
